--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,11 +7,13 @@ readme = "README.md"
 
 [tool.poetry.dependencies]
 python = "^3.10"
+pylint = "^3.3.1"
 
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^7.4.2"
 coverage = "^7.6.4"
+pylint = "^3.3.1"
 
 [build-system]
 requires = ["poetry-core"]
